--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,8 +33,7 @@
         <log type="coverage-clover"
             target="./build/reports/phpunit.coverage.xml"/>
         <log type="junit"
-            target="./build/reports/phpunit.xml"
-            logIncompleteSkipped="false"/>
+            target="./build/reports/phpunit.xml"/>
         <log type="coverage-text"
             target="php://stdout"
             showUncoveredFiles="false"/>
