--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,10 +3,10 @@
 <!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
-    convertDeprecationsToExceptions="false"
-    backupGlobals="false"
     colors="true"
+    stopOnFailure="false"
     bootstrap="./vendor/autoload.php"
+    convertDeprecationsToExceptions="false"
 >
     <coverage processUncoveredFiles="true">
         <include>
@@ -22,6 +22,7 @@
 
     <php>
         <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
         <ini name="error_reporting" value="-1" />
         <ini name="intl.default_locale" value="en" />
         <ini name="intl.error_level" value="0" />
