--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "idmarinas/advertising-bundle",
     "description": "Show network ads in your Symfony App. Come with the Adsense Network and Generic network for add your own network.",
-    "version": "0.2.1",
+    "version": "0.3.0",
     "type": "symfony-bundle",
     "license": "BSD-3-Clause",
     "authors": [
@@ -18,19 +18,20 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.1.3",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0",
-        "twig/twig": "^2.12|^3.0"
+        "php": "^7.1 | ^8.0 | ^8.1",
+        "symfony/config": "^4.4 | ^5.0",
+        "symfony/dependency-injection": "^4.4 | ^5.0",
+        "symfony/event-dispatcher": "^4.4 | ^5.0",
+        "symfony/http-kernel": "^4.4 | ^5.0",
+        "symfony/yaml": "^4.4 | ^5.0",
+        "twig/twig": "^2.12 | ^3.0"
     },
     "require-dev": {
         "matthiasnoback/symfony-config-test": "^4.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
         "nyholm/symfony-bundle-test": "^1.7",
         "phpunit/phpunit": "^8.5",
+        "rector/rector": "^0.12.12",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/test-pack": "^1.0"
     },
