Drop support for PHP 7.3

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.3 | ^7.4 | ^8.0 | ^8.1",
+        "php": "^7.4 | ^8.0 | ^8.1",
         "symfony/config": "^4.4 | ^5.0",
         "symfony/dependency-injection": "^4.4 | ^5.0",
         "symfony/event-dispatcher": "^4.4 | ^5.0",
