--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
         "matthiasnoback/symfony-config-test": "^4.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
         "nyholm/symfony-bundle-test": "^1.7",
-        "phpunit/phpunit": "^8.5",
-        "rector/rector": "^0.12.12",
+        "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.13",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/test-pack": "^1.0"
     },
@@ -58,6 +58,7 @@
         }
     ],
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit --process-isolation",
+        "rector": "php vendor/bin/rector process"
     }
 }
