--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,14 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.yml]
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
+
+[.mage.yml]
+indent_size = 4
 
 [*.test]
 insert_final_newline = false
