--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,20 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4 | ^8.0 | ^8.1",
-        "symfony/config": "^4.4 | ^5.0",
-        "symfony/dependency-injection": "^4.4 | ^5.0",
-        "symfony/event-dispatcher": "^4.4 | ^5.0",
-        "symfony/http-kernel": "^4.4 | ^5.0",
-        "symfony/yaml": "^4.4 | ^5.0",
+        "php": "^7.4 | ^8.0",
+        "symfony/config": "^4.4 | ^5.4 | ^6.1",
+        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1",
+        "symfony/event-dispatcher": "^4.4 | ^5.4 | ^6.1",
+        "symfony/http-kernel": "^4.4 | ^5.4 | ^6.1",
+        "symfony/yaml": "^4.4 | ^5.4 | ^6.1",
         "twig/twig": "^2.12 | ^3.0"
     },
     "require-dev": {
         "matthiasnoback/symfony-config-test": "^4.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
-        "nyholm/symfony-bundle-test": "^1.7",
+        "nyholm/symfony-bundle-test": "^2.0",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.13",
+        "rector/rector": "^0.15",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/test-pack": "^1.0"
     },
