--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,37 +1,44 @@
-name: PHP Composer
+name: Test Suite
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - master
 
 jobs:
   build:
+    runs-on: ${{ matrix.operating-system }}
+    name: PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
+    strategy:
+      matrix:
+        operating-system: [ ubuntu-latest ]
+        php: [ '7.4', '8.0', '8.1', '8.2' ]
+        symfony: ['4.4.*', '5.4.*', '6.1.*', '6.2.*']
 
-    runs-on: ubuntu-latest
+        exclude:
+          - php: '7.4'
+            symfony: '6.1.*'
+          - php: '8.0'
+            symfony: '6.1.*'
+          - php: '7.4'
+            symfony: '6.2.*'
+          - php: '8.0'
+            symfony: '6.2.*'
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@master
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate
+      - name: Setup PHP ${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          tools: flex
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+      - name: Download dependencies
+        env:
+          SYMFONY_REQUIRE: ${{ matrix.symfony }}
+        uses: ramsey/composer-install@v2
 
-    - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    - name: Run test suite
-      run: composer run-script test
+      - name: Run test suite on PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
+        run: ./vendor/bin/phpunit
