--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,13 +9,11 @@
     convertDeprecationsToExceptions="false"
 >
     <php>
-        <!-- <ini name="display_errors" value="1" /> -->
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
         <ini name="error_reporting" value="-1" />
-        <server name="APP_ENV" value="test" force="true" />
-        <server name="SHELL_VERBOSITY" value="-1" />
-        <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
-        <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+        <ini name="intl.default_locale" value="en" />
+        <ini name="intl.error_level" value="0" />
+        <ini name="memory_limit" value="-1" />
     </php>
 
     <testsuites>
