--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/config": "^4.4 | ^5.4 | ^6.1",
-        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1",
-        "symfony/event-dispatcher": "^4.4 | ^5.4 | ^6.1",
-        "symfony/http-kernel": "^4.4 | ^5.4 | ^6.1",
-        "symfony/yaml": "^4.4 | ^5.4 | ^6.1",
+        "symfony/config": "^4.4 | ^5.4 | ^6.1 | ^7.0",
+        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1 | ^7.0",
+        "symfony/event-dispatcher": "^4.4 | ^5.4 | ^6.1 | ^7.0",
+        "symfony/http-kernel": "^4.4 | ^5.4 | ^6.1 | ^7.0",
+        "symfony/yaml": "^4.4 | ^5.4 | ^6.1 | ^7.0",
         "twig/twig": "^2.12 | ^3.0"
     },
     "require-dev": {
