--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "twig/twig": "^2.12 | ^3.0"
     },
     "require-dev": {
-        "matthiasnoback/symfony-config-test": "^4.2",
+        "matthiasnoback/symfony-config-test": "^4.2 | ^5.1",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
         "nyholm/symfony-bundle-test": "^2.0",
         "phpunit/phpunit": "^9.5",
