--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     },
     "require-dev": {
         "matthiasnoback/symfony-config-test": "^4.2 | ^5.1",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.2",
-        "nyholm/symfony-bundle-test": "^2.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.2 | ^5.1",
+        "nyholm/symfony-bundle-test": "^2.0 | ^3.0",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^0.15",
         "symfony/phpunit-bridge": "^5.3",
