Updated organization name and projectVersion

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 # Project informations
 sonar.projectKey=idmarinas_advertising-bundle
-sonar.organization=idmarinas-github
+sonar.organization=idmarinas
 sonar.projectName=Advertising Bundle
+sonar.projectVersion=2.0.0
 
 # Project URLs
 sonar.links.homepage=https://github.com/idmarinas/advertising-bundle
