--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4 | ^8.0",
-        "symfony/config": "^4.4 | ^5.4 | ^6.1 | ^7.0",
-        "symfony/dependency-injection": "^4.4 | ^5.4 | ^6.1 | ^7.0",
-        "symfony/event-dispatcher": "^4.4 | ^5.4 | ^6.1 | ^7.0",
-        "symfony/http-kernel": "^4.4 | ^5.4 | ^6.1 | ^7.0",
-        "symfony/yaml": "^4.4 | ^5.4 | ^6.1 | ^7.0",
+        "php": "^8.0",
+        "symfony/config": "^5.4 | ^6.4 | ^7.0",
+        "symfony/dependency-injection": "^5.4 | ^6.4 | ^7.0",
+        "symfony/event-dispatcher": "^5.4 | ^6.4 | ^7.0",
+        "symfony/http-kernel": "^5.4 | ^6.4 | ^7.0",
+        "symfony/yaml": "^5.4 | ^6.4 | ^7.0",
         "twig/twig": "^2.12 | ^3.0"
     },
     "require-dev": {
@@ -30,7 +30,7 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.2 | ^5.1",
         "nyholm/symfony-bundle-test": "^2.0 | ^3.0",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.15",
+        "rector/rector": "^1.2",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/test-pack": "^1.0"
     },
